WIP: Add DataRoot.META
// FIXME: add activation

JIRA: YANGTOOLS-1779
Change-Id: I5501da6bfe0d4695125075f6904bebb6b9df5fe9
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>